--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,17 @@ dependencies:
   json_serializable: ^6.7.0
   hooks_riverpod: ^2.3.4
   flutter_native_splash: ^2.3.4
+  flutter_chat_ui: ^1.6.9
+  riverpod_generator: ^2.3.5
+  open_filex: ^4.3.2
+  path_provider: ^2.0.15
+  image_picker: ^1.0.4
+  file_picker: ^6.0.0
+  http: ^1.1.0
+  mime: ^1.0.4
+  uuid: ^4.1.0
+  flutter_hooks: ^0.20.3
+  flutter_chat_types: ^3.6.2
 
 
 dev_dependencies:
@@ -38,6 +49,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/mock/json/messages.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
