--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,19 @@ dependencies:
   flutter_chat_types: ^3.6.2
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_gen_runner: ^5.3.2
   build_runner: ^2.4.4
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo_geochat.png"
 
 flutter_gen:
   output: lib/gen/
@@ -49,6 +56,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
     - assets/mock/json/messages.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
