--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   uuid: ^4.1.0
   flutter_hooks: ^0.20.3
   flutter_chat_types: ^3.6.2
-
+  riverpod_annotation: ^2.3.0
+  auto_size_text: ^3.0.0
 
 
 dev_dependencies:
