--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_chat_types: ^3.6.2
   riverpod_annotation: ^2.3.0
   auto_size_text: ^3.0.0
+  go_router: ^12.0.1
 
 flutter_native_splash:
   color: "#FFFFFF"
