--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   riverpod_annotation: ^2.3.0
   auto_size_text: ^3.0.0
   go_router: ^12.0.1
+  socket_io_client: ^2.0.3+1
 
 flutter_native_splash:
   color: "#FFFFFF"
