--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,7 @@ jobs:
           ISSUE_NUMBER=${{ github.event.issue.number }}
           JSON_DATA=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                       "https://api.github.com/repos/${{ github.repository }}/issues/${ISSUE_NUMBER}/comments") # Get Body From Github API
-          BODY_VALUE=$(echo "$JSON_DATA" | jq -r '.')
+          BODY_VALUE=$(echo "$JSON_DATA" | jq -r '.[-1].body')
           echo "LAST COMMENT : $BODY_VALUE"
 
       - name: Display Pull Request Comments
