--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,8 +20,12 @@ jobs:
           JSON_DATA=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                       "https://api.github.com/repos/${{ github.repository }}/issues/${ISSUE_NUMBER}/comments") # Get Body From Github API
           BODY_VALUE=$(echo "$JSON_DATA" | jq -r '.[-1].body')
-          echo "LAST COMMENT : $BODY_VALUE"
+          DUMMY=$(echo $BODY_VALUE|grep RELEASE_NOTE_ACTIONS)
+          RELEASE_NOTE=$(echo $BODY_VALUE|grep 'RELEASE_NOTE_ACTIONS : '| sed -n 's/.*RELEASE_NOTE_ACTIONS : \[\(.*\)\].*/\1/p')
+          export $RELEASE_NOTE
 
-      - name: Display Pull Request Comments
+      - name: release trigger
         run: |
-          echo "Pull Request Comments: ${{ steps.comments.outputs.comments }}"
+          if [ ! -n "RELEASE_NOTE" ]; then
+            echo "SUCCEEDED TO GET RELEASE NOTE FROM COMMENT"
+          fi
