change : change actions workflow detail

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -28,4 +28,6 @@ jobs:
         run: |
           if [ ! -n "RELEASE_NOTE" ]; then
             echo "SUCCEEDED TO GET RELEASE NOTE FROM COMMENT"
+          else
+            echo "THIS IS NOT RELEASE NOTE"
           fi
