--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: release trigger
         run: |
-          if [ ! -n "RELEASE_NOTE" ]; then
-            echo "SUCCEEDED TO GET RELEASE NOTE FROM COMMENT"
+          if [ ! -n "$RELEASE_NOTE" ]; then
+            echo "$RELEASE_NOTE"
           else
             echo "THIS IS NOT RELEASE NOTE"
           fi
