change : change actions workflow detail

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,7 +22,7 @@ jobs:
           BODY_VALUE=$(echo "$JSON_DATA" | jq -r '.[-1].body')
 
           RELEASE_NOTE=$(echo $BODY_VALUE|grep 'RELEASE_NOTE_ACTIONS : '| sed -n 's/.*RELEASE_NOTE_ACTIONS : \[\(.*\)\].*/\1/p')
-          export $RELEASE_NOTE
+          export RELEASE_NOTE
 
       - name: release trigger
         run: |
