--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,8 +21,8 @@ jobs:
                       "https://api.github.com/repos/${{ github.repository }}/issues/${ISSUE_NUMBER}/comments") # Get Body From Github API
           BODY_VALUE=$(echo "$JSON_DATA" | jq -r '.[-1].body')
 
-          RELEASE_NOTE=$(echo $BODY_VALUE|grep 'RELEASE_NOTE_ACTIONS : '| sed -n 's/.*RELEASE_NOTE_ACTIONS : \[\(.*\)\].*/\1/p')
-          echo "RELEASE_NOTE >> $GITHUB_ENV"
+          
+          echo "RELEASE_NOTE=$(echo $BODY_VALUE|grep 'RELEASE_NOTE_ACTIONS : '| sed -n 's/.*RELEASE_NOTE_ACTIONS : \[\(.*\)\].*/\1/p') >> $GITHUB_ENV"
 
       - name: release trigger
         run: |
